navbar correctiion
navbar words overlapping on smaller devices,

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,6 @@ p{
     font-family:"Montserrat", sans-serif; 
     font-size: 25px;
     background-color: #696969;
-    font-weight: 600;
-    padding: 10px;
     text-align: center;
 }
  .navstyle{
